frontend/test/should_pass/array_006.grg
using array_model_001;

rule addToArray {
	a:A; b:A;

	if {
		a.niceArray.subarray(a.niceArray.indexOf("foo"), 1).size()>=1 ;
		a.niceArray.subarray(a.niceArray.indexOf("foo", 42), 1).size()>=1 ;
		a.niceArray.asSet().size()>=1;
		a.spiceArray.subarray(0, a.spiceArray.size()).size()>=1;
	}		
	
	modify {
		eval {
			a.niceArray = a.niceArray.subarray(a.niceArray.indexOf("foo"), 1);
			a.niceArray = a.niceArray.subarray(a.niceArray.indexOf("foo", 42), 1);
			a.spiceArray = array<int>[(a.niceArray.asSet() & set<string>{"a","b"}).size()];
			a.spiceArray = a.spiceArray.subarray(0, a.spiceArray.size());
		}		
	}
}
