frontend/test/should_fail/deque_004.grg
using deque_model_001;

rule constAssignment {
	a:A;

	modify {
		eval {
			a.constStringDeque = a.constStringDeque + deque<string>] "bla" [;
		}
	}
}
